--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Ildar Daminov <daminovib@gmail.com>"]
 readme = "README.md"
-packages = [{include = "syster_project"}]
+packages = [{include = "source_code"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -22,6 +22,7 @@ seaborn = "^0.12.1"
 scikit-learn = "^1.1.3"
 Sphinx = {version = "^4.5.0", optional = true}
 sphinx-rtd-theme = {version = "^1.0.0", optional = true}
+pybliometrics = "^3.4.0"
 
 [tool.poetry.extras]
 docs = ["Sphinx", "sphinx-rtd-theme"]
