--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
       #----------------------------------------------  
       - name: Create .nojekyll file.
         run: | 
-          > .nojekyll
+          > docs/_build/html/.nojekyll
         
       - name: Deploy documentation to gh-pages branch
         uses: s0/git-publish-subdir-action@develop
